--- a/index.html
+++ b/index.html
@@ -3,35 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Dreamer</title>
-    <link rel="stylesheet" href="The-dreamer.css">
-      <link rel="stylesheet" href="https://use.typekit.net/dvx3wrs.css">
- 
-  
+    <title>Yu Tsun</title>
+    <link rel="stylesheet" href="yuTusn.css">
+    <link rel="stylesheet" href="https://use.typekit.net/dvx3wrs.css">
 </head>
 <body>
 
-<a href="../character-select.html"> Character Select</a>
+<a href="../character-select.html">Character Select</a>
 
-<h1 class="reveal"> YOU ARE THE DREAMER</h1>
+<h1>YOU ARE YU TSUN</h1>
 
+<div class="click-hint" id="clickHint" style="font-family: 'pf-videotext', sans-serif;">Click to continue</div>
 
+<h2 class="reveal">You are being hunted.</h2>
 
-<p class="reveal">You arrive at ancient ruins with a single purpose.
-Creation will occur through dreaming.</p>
+<p class="reveal">Time is fragmented.</p>
 
+<a href="garden.html" class="reveal">Albert's Garden</a>
 
-
-<a href="ruins.html" class="reveal">
-    
-    The Circular Ruins
-
- <img src="circular .png" alt="ruins">
-
+<a href="garden.html" class="reveal door-link">
+    <img src="AdobeStock_1011695890.jpeg" alt="garden">
 </a>
 
-<p class="reveal">A temple reclaimed by jungle and ritual.</p>
+<p class="reveal">click to enter
+</p>
 
-<script src="The-dreamer-reveal.js"></script>
+<script src="yuTsun.js"></script>
+
 </body>
 </html>
